# apartment_renovation

./: .gitignore  README.md  pyproject.toml
src/api/v1/: urls.py
src/api/v1/workers/: urls.py  views.py
src/config/: settings.py  urls.py
src/workers/: admin.py  apps.py  models.py  serializers.py  tests.py
src/workers/migrations/: 0001_initial.py  0002_alter_worker_specialization.py
